fix: Added styles for correct button behavior on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,15 @@ select {
   font: inherit;
 }
 
+label,
+button,
+a {
+  -webkit-tap-highlight-color: transparent;
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+}
+
 ul,
 ol {
   list-style: none;
@@ -24,12 +33,19 @@ a {
 
 @font-face {
   font-family: 'Poppins';
-  src: url('../src/assets/fonts/Poppins-Medium.woff2') format('woff2'),
-    url('../src/assets/fonts/Poppins-Medium.woff') format('woff'),
-    url('../src/assets/fonts/Poppins-Medium.ttf') format('truetype');
+  src: url('../public/assets/fonts/Poppins-Medium.woff2') format('woff2'),
+    url('../public/assets/fonts/Poppins-Medium.woff') format('woff'),
+    url('../public/assets/fonts/Poppins-Medium.ttf') format('truetype');
+
   font-weight: 500;
   font-style: normal;
   font-display: swap;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 500;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; 
 }
 
 body {
